[package]
name = "bevy_whisker_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.21.0"
futures-lite = "2.0.1"
clap = "4.4.11"
serde = { version = "1.0.193", features = ["derive"] }
flume = "0.11.0"
serialport = "4.2.2"
hex = "0.4.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3